handling the bot per guild