@@ -14,6 +14,7 @@ import org.springframework.util.CollectionUtils;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * The hero Service
@@ -39,14 +40,19 @@ public class HeroService {
     @Autowired
     private HeroMapper heroMapper;
 
+    private static boolean wasHeroSuppressedFromHeroes(Set<HeroDAO> userDAO, String heroName, String guildId) {
+        return userDAO.stream().noneMatch(hero -> hero.getName().equals(heroName) && hero.getGuildId().equals(guildId));
+    }
+
     /**
      * Creates a hero
      *
      * @param heroName the heroes name
      * @param userId   the users id
      * @param username the username
+     * @param guildId  the server id
      */
-    public void createHero(String heroName, String userId, String username) {
+    public void createHero(String heroName, String userId, String username, String guildId) {
         Optional<UserDAO> optUser = userRepository.findByUserId(userId);
         UserDAO userDAO;
 
@@ -60,6 +66,7 @@ public class HeroService {
         }
         HeroDAO heroDAO = new HeroDAO();
         heroDAO.setName(heroName);
+        heroDAO.setGuildId(guildId);
         heroDAO = heroRepository.save(heroDAO);
 
         Set<HeroDAO> oldHeroes = userDAO.getHeroes();
@@ -76,20 +83,24 @@ public class HeroService {
     }
 
     /**
-     * Get all the heroes of the current users id
+     * Get all the heroes of the current users id by the discord server
      *
-     * @param id the users id
+     * @param userId the users id
      * @return all the heroes
      */
     @Transactional
-    public List<Hero> getHeroesOfUser(String id) {
+    public List<Hero> getHeroesOfUser(String userId, String guildId) {
         List<Hero> ret = null;
-        UserDAO userDAO = userRepository.findByUserId(id).orElse(null);
+        UserDAO userDAO = userRepository.findByUserId(userId).orElse(null);
         if (userDAO != null) {
-            ret = userDAO.getHeroes().stream()
-                    .map(heroMapper::mapHeroDAOToHero)
-                    .sorted(Comparator.comparing(Hero::getId))
-                    .collect(Collectors.toList());
+            Set<HeroDAO> tmpSet = userDAO.getHeroes();
+            List<HeroDAO> tmpList = null;
+            if (!CollectionUtils.isEmpty(tmpSet)) {
+                tmpList = tmpSet.stream().filter(hero -> hero.getGuildId().equals(guildId)).toList();
+            }
+            if (!CollectionUtils.isEmpty(tmpList)) {
+                ret = tmpList.stream().map(heroMapper::mapHeroDAOToHero).sorted(Comparator.comparing(Hero::getId)).collect(Collectors.toList());
+            }
         }
         return ret;
 
@@ -100,17 +111,33 @@ public class HeroService {
      *
      * @param heroName the heroes name
      * @param userId   the users id
+     * @param guildId  the discord server id
      * @return true if was suppressed false otherwise
      */
     @Transactional
-    public boolean deleteHero(String heroName, String userId) {
+    public boolean deleteHero(String heroName, String userId, String guildId) {
         UserDAO userDAO = userRepository.findByUserId(userId).orElseThrow();
 
         Set<HeroDAO> heroes = userDAO.getHeroes();
-        heroes.removeAll(heroes.stream().filter(hero -> hero.getName().equals(heroName)).collect(Collectors.toSet()));
+        Set<HeroDAO> selectedHeroes = userDAO.getSelectedHero();
+
+        removeAllHeroes(heroName, guildId, heroes, heroes);
+        removeAllHeroes(heroName, guildId, selectedHeroes, heroes);
+
         userDAO.setHeroes(heroes);
+        userDAO.setSelectedHero(selectedHeroes);
+
         userDAO = userRepository.save(userDAO);
-        return userDAO.getHeroes().stream().noneMatch(hero -> hero.getName().equals(heroName));
+
+        return wasHeroSuppressedFromHeroes(userDAO.getHeroes(), heroName, guildId) ||
+                wasHeroSuppressedFromHeroes(userDAO.getSelectedHero(), heroName, guildId);
+    }
+
+    private void removeAllHeroes(String heroName, String guildId, Set<HeroDAO> selectedHeroes, Set<HeroDAO> heroes) {
+        Stream<HeroDAO> concernedHeroesA = heroes.stream().filter(hero -> hero.getName().equals(heroName) && hero.getGuildId().equals(guildId));
+        Stream<HeroDAO> concernedHeroesB = heroes.stream().filter(hero -> hero.getName().equals(heroName) && hero.getGuildId().equals(guildId));
+        selectedHeroes.removeAll(concernedHeroesA.collect(Collectors.toSet()));
+        this.heroRepository.deleteAll(concernedHeroesB.toList());
     }
 
     /**
@@ -128,21 +155,28 @@ public class HeroService {
      *
      * @param heroName the heroes name
      * @param userId   the users ID
+     * @param guildId  the discord server id
      * @return true if a user is selected
      */
     @Transactional
-    public boolean selectHero(String heroName, String userId) {
+    public boolean selectHero(String heroName, String userId, String guildId) {
         boolean ret = false;
 
         UserDAO userDAO = userRepository.findByUserId(userId).orElseThrow(null);
 
         if (userDAO != null) {
-            Optional<HeroDAO> optionalHeroDAO = userDAO.getHeroes().stream().filter(heroDAO -> heroDAO.getName().equals(heroName)).findFirst();
+            Optional<HeroDAO> optionalHeroDAO = userDAO.getHeroes().stream().filter(heroDAO -> heroDAO.getName().equals(heroName) && heroDAO.getGuildId().equals(guildId)).findFirst();
+
             if (optionalHeroDAO.isPresent()) {
                 HeroDAO hero = optionalHeroDAO.get();
-                userDAO.setSelectedHero(hero);
-                userRepository.save(userDAO);
-                ret = true;
+                Set<HeroDAO> currentSelectedHeroes = userDAO.getSelectedHero();
+                if (currentSelectedHeroes != null) {
+                    currentSelectedHeroes.removeIf(heroDAO -> heroDAO.getGuildId().equals(hero.getGuildId()));
+                    currentSelectedHeroes.add(hero);
+                    userDAO.setSelectedHero(currentSelectedHeroes);
+                    userRepository.save(userDAO);
+                    ret = true;
+                }
             }
         }
         return ret;
@@ -154,17 +188,21 @@ public class HeroService {
      *
      * @param newHeroName the new hero name
      * @param userId      the id of the curent user playing
+     * @param guildId     the id of the discord server
      * @return true if was renamed otherwise returns falls
      */
     @Transactional
-    public boolean renameHero(String newHeroName, String userId) {
+    public boolean renameHero(String newHeroName, String userId, String guildId) {
         boolean ret = false;
         UserDAO userDAO = userRepository.findByUserId(userId).orElseThrow();
-        HeroDAO selectedHero = userDAO.getSelectedHero();
+        HeroDAO selectedHero = userDAO.getSelectedHero().stream().filter(heroDAO -> heroDAO.getGuildId().equals(guildId)).findFirst().orElse(null);
 
         if (selectedHero != null) {
+            Set<HeroDAO> currentSelectedHeroes = userDAO.getSelectedHero();
+            currentSelectedHeroes.remove(selectedHero);
             selectedHero.setName(newHeroName);
-            userDAO.setSelectedHero(selectedHero);
+            currentSelectedHeroes.add(selectedHero);
+            userDAO.setSelectedHero(currentSelectedHeroes);
             userRepository.save(userDAO);
             ret = true;
         }
@@ -175,20 +213,16 @@ public class HeroService {
     /**
      * Gets the top 10 heroes by their level
      *
+     * @param guildId the guildId
      * @return a friendly string containing the top heroes
      */
-    public String getLeaderboard() {
+    public String getLeaderboard(String guildId) {
         StringBuilder ret = new StringBuilder();
-        List<Hero> heroes = heroRepository.findTop10ByOrderByLevelDesc().stream().map(heroMapper::mapHeroDAOToHero).toList();
+        List<Hero> heroes = heroRepository.findTop10ByGuildIdOrderByLevelDesc(guildId).stream().map(heroMapper::mapHeroDAOToHero).toList();
         if (!CollectionUtils.isEmpty(heroes)) {
             AtomicInteger i = new AtomicInteger(1);
             heroes.forEach(hero -> {
-                ret.append(i.getAndIncrement())
-                        .append(" : ")
-                        .append(hero.getName())
-                        .append(" is level : ")
-                        .append(hero.getLevel())
-                        .append("\n");
+                ret.append(i.getAndIncrement()).append(" : ").append(hero.getName()).append(" is level : ").append(hero.getLevel()).append("\n");
             });
 
         } else {
